@@ -1,244 +1,140 @@
 import com.android.tools.metalava.CREATE_ARCHIVE_TASK
-import com.android.tools.metalava.CREATE_BUILD_INFO_TASK
-import com.android.tools.metalava.configureBuildInfoTask
-import com.android.tools.metalava.configurePublishingArchive
-import org.gradle.api.tasks.testing.logging.TestLogEvent
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-import java.io.FileInputStream
-import java.io.FileNotFoundException
-import java.util.Properties
+import com.android.tools.metalava.buildinfo.CREATE_BUILD_INFO_TASK
+import com.android.tools.metalava.buildinfo.CreateAggregateLibraryBuildInfoFileTask.Companion.CREATE_AGGREGATE_BUILD_INFO_FILES_TASK
 
-buildDir = getBuildDirectory()
-
-defaultTasks = mutableListOf(
-    "installDist",
-    "test",
-    CREATE_ARCHIVE_TASK,
-    CREATE_BUILD_INFO_TASK,
-    "ktlint",
-    "lint"
-)
-
-repositories {
-    google()
-    mavenCentral()
-    val lintRepo = project.findProperty("lintRepo") as String?
-    if (lintRepo != null) {
-        logger.warn("Building using custom $lintRepo maven repository")
-        maven {
-            url = uri(lintRepo)
-        }
-    }
-}
+defaultTasks =
+    mutableListOf(
+        "installDist",
+        "test",
+        CREATE_ARCHIVE_TASK,
+        CREATE_BUILD_INFO_TASK,
+        CREATE_AGGREGATE_BUILD_INFO_FILES_TASK,
+        "lint",
+        "ktCheck",
+    )
 
 plugins {
-    alias(libs.plugins.kotlinJvm)
-    id("com.android.lint") version "8.1.0-alpha06"
     id("application")
-    id("java")
+    id("org.jetbrains.kotlin.jvm")
     id("maven-publish")
+    id("metalava-build-plugin")
 }
-
-group = "com.android.tools.metalava"
-version = getMetalavaVersion()
 
 application {
     mainClass.set("com.android.tools.metalava.Driver")
     applicationDefaultJvmArgs = listOf("-ea", "-Xms2g", "-Xmx4g")
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
-
-tasks.withType(KotlinCompile::class.java) {
-    kotlinOptions {
-        jvmTarget = "17"
-        apiVersion = "1.7"
-        languageVersion = "1.7"
-        allWarningsAsErrors = true
-    }
-}
-
-val customLintVersion = findProperty("lintVersion") as String?
-val studioVersion: String = if (customLintVersion != null) {
-    logger.warn("Building using custom $customLintVersion version of Android Lint")
-    customLintVersion
-} else {
-    "31.1.0-alpha06"
-}
-
 dependencies {
-    implementation("com.android.tools.external.org-jetbrains:uast:$studioVersion")
-    implementation("com.android.tools.external.com-intellij:kotlin-compiler:$studioVersion")
-    implementation("com.android.tools.external.com-intellij:intellij-core:$studioVersion")
-    implementation("com.android.tools.lint:lint-api:$studioVersion")
-    implementation("com.android.tools.lint:lint-checks:$studioVersion")
-    implementation("com.android.tools.lint:lint-gradle:$studioVersion")
-    implementation("com.android.tools.lint:lint:$studioVersion")
-    implementation("com.android.tools:common:$studioVersion")
-    implementation("com.android.tools:sdk-common:$studioVersion")
-    implementation("com.android.tools:sdklib:$studioVersion")
+    implementation(project(":metalava-model"))
+    implementation(project(":metalava-model-psi"))
+    implementation(project(":metalava-model-text"))
+    implementation(project(":metalava-reporter"))
+    implementation(libs.androidToolsExternalUast)
+    implementation(libs.androidToolsExternalKotlinCompiler)
+    implementation(libs.androidToolsExternalIntellijCore)
+    implementation(libs.androidLintApi)
+    implementation(libs.androidLintChecks)
+    implementation(libs.androidLintGradle)
+    implementation(libs.androidLint)
+    implementation(libs.androidToolsCommon)
+    implementation(libs.androidToolsSdkCommon)
+    implementation(libs.androidToolsSdklib)
+    implementation(libs.clikt)
     implementation(libs.kotlinStdlib)
     implementation(libs.kotlinReflect)
-    implementation("org.ow2.asm:asm:8.0")
-    implementation("org.ow2.asm:asm-tree:8.0")
-    implementation("com.google.guava:guava:31.0.1-jre")
-    testImplementation("com.android.tools.lint:lint-tests:$studioVersion")
-    testImplementation("junit:junit:4.13.2")
-    testImplementation("com.google.truth:truth:1.1.3")
+    implementation(libs.asm)
+    implementation(libs.asmTree)
+    implementation(libs.gson)
+    testImplementation(project(":metalava-testing"))
+    testImplementation(libs.androidLintTests)
+    testImplementation(libs.junit4)
+    testImplementation(libs.truth)
     testImplementation(libs.kotlinTest)
 }
 
-val zipTask: TaskProvider<Zip> = project.tasks.register(
-    "zipResultsOf${name.capitalize()}",
-    Zip::class.java
-) {
-    destinationDirectory.set(File(getDistributionDirectory(), "host-test-reports"))
-    archiveFileName.set("metalava-tests.zip")
-}
-
-val testTask = tasks.named("test", Test::class.java)
-testTask.configure {
-    jvmArgs = listOf("--add-opens=java.base/java.lang=ALL-UNNAMED")
-    maxParallelForks = (Runtime.getRuntime().availableProcessors() / 2).takeIf { it > 0 } ?: 1
-    testLogging.events = hashSetOf(
-        TestLogEvent.FAILED,
-        TestLogEvent.PASSED,
-        TestLogEvent.SKIPPED,
-        TestLogEvent.STANDARD_OUT,
-        TestLogEvent.STANDARD_ERROR
-    )
-    if (isBuildingOnServer()) ignoreFailures = true
-    finalizedBy(zipTask)
-}
-zipTask.configure {
-    from(testTask.map { it.reports.junitXml.outputLocation.get() })
-}
-
-fun getMetalavaVersion(): Any {
-    val versionPropertyFile = File(projectDir, "src/main/resources/version.properties")
-    if (versionPropertyFile.canRead()) {
-        val versionProps = Properties()
-        versionProps.load(FileInputStream(versionPropertyFile))
-        val metalavaVersion = versionProps["metalavaVersion"]
-            ?: throw IllegalStateException("metalava version was not set in ${versionPropertyFile.absolutePath}")
-        return if (isBuildingOnServer()) {
-            metalavaVersion
-        } else {
-            // Local builds are not public release candidates.
-            "$metalavaVersion-SNAPSHOT"
-        }
-    } else {
-        throw FileNotFoundException("Could not read ${versionPropertyFile.absolutePath}")
-    }
-}
-
-fun getBuildDirectory(): File {
-    return if (System.getenv("OUT_DIR") != null) {
-        File(System.getenv("OUT_DIR"), "metalava")
-    } else {
-        File(projectDir, "../../out/metalava")
-    }
-}
+/** The location into which a fake representation of the prebuilts/sdk directory will be written. */
+val testPrebuiltsSdkDir = layout.buildDirectory.dir("prebuilts/sdk")
 
 /**
- * The build server will copy the contents of the distribution directory and make it available for
- * download.
- */
-fun getDistributionDirectory(): File {
-    return if (System.getenv("DIST_DIR") != null) {
-        File(System.getenv("DIST_DIR"))
-    } else {
-        File(projectDir, "../../out/dist")
-    }
-}
-
-fun isBuildingOnServer(): Boolean {
-    return System.getenv("OUT_DIR") != null && System.getenv("DIST_DIR") != null
-}
-
-/**
- * @return build id string for current build
+ * Register tasks to emulate parts of the prebuilts/sdk repository using source from this directory.
  *
- * The build server does not pass the build id so we infer it from the last folder of the
- * distribution directory name.
+ * [sourceDir] is the path to the root directory of code that is compiled into a jar that
+ * corresponds to the jar specified by [destJar].
+ *
+ * [destJar] is the path to a jar within prebuilts/sdk. The fake jar created from [sourceDir] is
+ * copied to getBuildDirectory()/prebuilts/sdk/$destJar.
+ *
+ * The jars created by this can be accessed by tests via the `METALAVA_TEST_PREBUILTS_SDK_ROOT`
+ * environment variable which is set to point to getBuildDirectory()/prebuilts/sdk; see [testTask].
  */
-fun getBuildId(): String {
-    return if (System.getenv("DIST_DIR") != null) File(System.getenv("DIST_DIR")).name else "0"
-}
+fun registerTestPrebuiltsSdkTasks(sourceDir: String, destJar: String): TaskProvider<Jar> {
+    val basename = sourceDir.replace("/", "-")
+    val javaCompileTaskName = "$basename.classes"
+    val jarTaskName = "$basename.jar"
 
-// KtLint: https://github.com/pinterest/ktlint
-
-fun Project.getKtlintConfiguration(): Configuration {
-    return configurations.findByName("ktlint") ?: configurations.create("ktlint") {
-        val dependency = project.dependencies.create("com.pinterest:ktlint:0.47.1")
-        dependencies.add(dependency)
-    }
-}
-
-tasks.register("ktlint", JavaExec::class.java) {
-    description = "Check Kotlin code style."
-    group = "Verification"
-    classpath = getKtlintConfiguration()
-    mainClass.set("com.pinterest.ktlint.Main")
-    args = listOf("src/**/*.kt", "build.gradle.kts")
-}
-
-tasks.register("ktlintFormat", JavaExec::class.java) {
-    description = "Fix Kotlin code style deviations."
-    group = "formatting"
-    classpath = getKtlintConfiguration()
-    mainClass.set("com.pinterest.ktlint.Main")
-    args = listOf("-F", "src/**/*.kt", "build.gradle.kts")
-}
-
-val publicationName = "Metalava"
-val repositoryName = "Dist"
-
-publishing {
-    publications {
-        create<MavenPublication>(publicationName) {
-            from(components["java"])
-            pom {
-                licenses {
-                    license {
-                        name.set("The Apache License, Version 2.0")
-                        url.set("http://www.apache.org/licenses/LICENSE-2.0.txt")
-                    }
-                }
-                developers {
-                    developer {
-                        name.set("The Android Open Source Project")
-                    }
-                }
-                scm {
-                    connection.set("scm:git:https://android.googlesource.com/platform/tools/metalava")
-                    url.set("https://android.googlesource.com/platform/tools/metalava/")
-                }
-            }
+    val compileTask =
+        project.tasks.register(javaCompileTaskName, JavaCompile::class) {
+            options.compilerArgs = listOf("--patch-module", "java.base=" + file(sourceDir))
+            source = fileTree(sourceDir)
+            classpath = project.files()
+            destinationDirectory.set(layout.buildDirectory.dir(javaCompileTaskName))
         }
+
+    val destJarFile = File(destJar)
+    val dir = destJarFile.parent
+    val filename = destJarFile.name
+    if (dir == ".") {
+        throw IllegalArgumentException("bad destJar argument '$destJar'")
     }
 
-    repositories {
-        maven {
-            name = repositoryName
-            url = uri("file://${getDistributionDirectory().canonicalPath}/repo/m2repository")
+    val jarTask =
+        project.tasks.register(jarTaskName, Jar::class) {
+            from(compileTask.flatMap { it.destinationDirectory })
+            archiveFileName.set(filename)
+            destinationDirectory.set(testPrebuiltsSdkDir.map { it.dir(dir) })
         }
-    }
+
+    return jarTask
 }
 
-val archiveTaskProvider = configurePublishingArchive(
-    project,
-    publicationName,
-    repositoryName,
-    getBuildId(),
-    getDistributionDirectory()
-)
-configureBuildInfoTask(
-    project,
-    isBuildingOnServer(),
-    getDistributionDirectory(),
-    archiveTaskProvider
-)
+val testPrebuiltsSdkApi30 =
+    registerTestPrebuiltsSdkTasks("src/testdata/prebuilts-sdk-test/30", "30/public/android.jar")
+val testPrebuiltsSdkApi31 =
+    registerTestPrebuiltsSdkTasks("src/testdata/prebuilts-sdk-test/31", "31/public/android.jar")
+val testPrebuiltsSdkExt1 =
+    registerTestPrebuiltsSdkTasks(
+        "src/testdata/prebuilts-sdk-test/extensions/1",
+        "extensions/1/public/framework-ext.jar"
+    )
+val testPrebuiltsSdkExt2 =
+    registerTestPrebuiltsSdkTasks(
+        "src/testdata/prebuilts-sdk-test/extensions/2",
+        "extensions/2/public/framework-ext.jar"
+    )
+val testPrebuiltsSdkExt3 =
+    registerTestPrebuiltsSdkTasks(
+        "src/testdata/prebuilts-sdk-test/extensions/3",
+        "extensions/3/public/framework-ext.jar"
+    )
+
+project.tasks.register("test-sdk-extensions-info.xml", Copy::class) {
+    from("src/testdata/prebuilts-sdk-test/sdk-extensions-info.xml")
+    into(testPrebuiltsSdkDir)
+}
+
+project.tasks.register("test-prebuilts-sdk") {
+    dependsOn(testPrebuiltsSdkApi30)
+    dependsOn(testPrebuiltsSdkApi31)
+    dependsOn(testPrebuiltsSdkExt1)
+    dependsOn(testPrebuiltsSdkExt2)
+    dependsOn(testPrebuiltsSdkExt3)
+    dependsOn("test-sdk-extensions-info.xml")
+}
+
+tasks.named<Test>("test").configure {
+    dependsOn("test-prebuilts-sdk")
+    setEnvironment(
+        "METALAVA_TEST_PREBUILTS_SDK_ROOT" to testPrebuiltsSdkDir.get().asFile.absolutePath
+    )
+}
